# yam

./: .gitignore  Cargo.toml  LICENSE  README.md  Test.yam  rustfmt.toml
cfg/: Cargo.toml
cfg/src/: lib.rs  lower.rs  print.rs  types.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
compiler/arena/: Cargo.toml
compiler/arena/src/: dense.rs  lib.rs  sparse.rs
compiler/ast/: Cargo.toml
compiler/ast/src/: lib.rs
compiler/br/: Cargo.toml
compiler/br-lower/: Cargo.toml
compiler/br-lower/src/: lib.rs
compiler/br/src/: ast.rs  lib.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: lib.rs
compiler/common/database/: Cargo.toml
compiler/common/database/src/: lib.rs
compiler/common/diag/src/: diag.rs  lib.rs  span.rs
compiler/common/intern/: Cargo.toml
compiler/common/intern/src/: lib.rs
compiler/diag/: Cargo.toml
compiler/diag/src/: lib.rs
compiler/diagnostics/: Cargo.toml
compiler/diagnostics/src/: diag.rs  lib.rs  span.rs
compiler/driver/: Cargo.toml
compiler/driver/src/: lib.rs
compiler/hir/: Cargo.toml
compiler/hir-lower/: Cargo.toml
compiler/hir-lower/src/: index.rs  lib.rs  lower.rs  module.rs  prelude.rs  resolve.rs
compiler/hir-lower/src/index/: canonical.rs  local.rs  mod.rs
compiler/hir/index/: Cargo.toml
compiler/hir/index/src/: generate.rs  lib.rs  stub.rs
compiler/hir/src/: ast.rs  hir.rs  ident.rs  lang_item.rs  lib.rs  types.rs
compiler/lex/: Cargo.toml
compiler/lex/src/: lib.rs  tests.rs  token.rs
compiler/old/codegen/: Cargo.toml
compiler/old/hir/: Cargo.toml
compiler/old/hir/src/: lang_item.rs
compiler/old/id/src/: lib.rs
compiler/old/ssir/: Cargo.toml
compiler/old/tyck/: Cargo.toml
compiler/parse/: Cargo.toml
compiler/parse/src/: api.rs  helpers.rs  lib.rs  parse.rs  tests.rs
compiler/parse/src/parse/: mod.rs  recovery.rs  rules.rs
compiler/parse/src/tests/: happy.rs  mod.rs  recovery.rs
compiler/pipeline/: Cargo.toml
compiler/pipeline/src/: lib.rs
compiler/pretty/: Cargo.toml
compiler/pretty/src/: lib.rs
compiler/raw_diag/: Cargo.toml
compiler/raw_diag/src/: diag.rs  lib.rs  span.rs
compiler/ssir/: Cargo.toml
compiler/ssir/src/: pretty.rs
compiler/syntax/: Cargo.toml  build.rs  yam.ungram
compiler/syntax/ast/: Cargo.toml
compiler/syntax/ast/src/: lib.rs
compiler/syntax/lex/: Cargo.toml
compiler/syntax/lex/src/: tests.rs  token.rs
compiler/syntax/package/: Cargo.toml
compiler/syntax/package/src/: graph.rs  lib.rs
compiler/syntax/parse/: Cargo.toml
compiler/syntax/parse/src/: graph.rs  helpers.rs  lib.rs  parse.rs  tests.rs
compiler/syntax/src/: builder.rs  kind.rs  lib.rs
compiler/syntax/syntax/: Cargo.toml
compiler/syntax/syntax/src/: builder.rs  intern.rs
compiler/text/: Cargo.toml
compiler/text/src/: lib.rs
compiler/thir/: Cargo.toml
compiler/thir/src/: lib.rs
compiler/tycheck/: Cargo.toml
compiler/tycheck/src/: decl.rs  lib.rs  reader.rs  solver.rs
compiler/verde/: Cargo.toml  README.md
compiler/verde/derive/: Cargo.toml
compiler/verde/derive/src/: database.rs  lib.rs  pushable.rs  query.rs  tracked.rs
compiler/verde/src/: arena.rs  cursed.rs  lib.rs  test.rs
compiler/verde/src/internal/: db.rs  mod.rs  serde.rs  traits.rs
compiler/verde/src/internal/storage/: interned.rs  mod.rs  pushable.rs  query.rs  routing.rs  stack_future.rs  tracked.rs
compiler/verde/src/storage/: generation_future.rs  mod.rs  query.rs  routing.rs  tracked.rs
compiler/verde/tests/: test.rs
compiler/watch/: Cargo.toml
compiler/watch/src/: main.rs  options.rs  watch.rs
compiler/yamc/: Cargo.toml
compiler/yamc/src/: database.rs  main.rs  pipeline.rs
compiler/yamw/: Cargo.toml
compiler/yamw/src/: main.rs
core/: core.yam  intrinsics.yam  lang_items.yam  ops.yam  prelude.yam  primitives.yam
diag/: Cargo.toml
diag/src/: diag.rs  lib.rs  span.rs
docs/: overview.md  progress.md
hir/: Cargo.toml
hir/src/: ctx.rs  hir.rs  lang_item.rs  lib.rs  pretty.rs  types.rs
id/src/: lib.rs
intern/src/: lib.rs
lex/: Cargo.toml
lex/src/: lib.rs  token.rs
mod_verify/: Cargo.toml
mod_verify/src/: lib.rs
name_resolve/: Cargo.toml
name_resolve/src/: ctx.rs  lib.rs  resolved.rs
parse/: Cargo.toml
parse/src/: api.rs  ast.rs  helpers.rs  lib.rs  tests.rs  token.rs
src/: compile.rs  diagnostic.rs  main.rs
src/parse/: ast.rs  mod.rs  token.rs
ssir/: Cargo.toml
ssir/src/: builder.rs  lib.rs  pretty.rs  ssir.rs
ssir/src/builder/: instr_api.rs  mod.rs  resolve.rs
syntax/: Cargo.toml
syntax/src/: builder.rs  kind.rs  lib.rs
tyck/: Cargo.toml
tyck/src/: check.rs  engine.rs  infer.rs  lib.rs
type_check/: Cargo.toml
type_check/src/: lib.rs  typed.rs
yamd/: Cargo.toml
yamd/src/: lib.rs
yamp/: Cargo.toml
yamp/src/: ast.rs  lib.rs  token.rs
