[workspace]
members = [
    "compiler/yamc",

    "compiler/common/database",
    "compiler/common/diag",
    "compiler/common/intern",

    "compiler/syntax/ast",
    "compiler/syntax/lex",
    "compiler/syntax/parse",
    "compiler/syntax/syntax",
]

[profile.release]
debug = true

[profile.dev.package.parse]
opt-level = 3
