[workspace]
members = ["compiler/*", "compiler/verde/derive"]
exclude = ["compiler/yamw"]

resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
ariadne = "0.3"
clap = "4.3"
cranelift = "0.103.0"
cranelift-module = "0.103.0"
cranelift-object = "0.103.0"
cstree = "0.12"
dashmap = "5.5"
expect-test = "1.4"
lasso = "0.7.2"
logos = "0.13"
once_cell = "1.18"
parking_lot = "0.12.1"
pretty = "0.12.3"
pretty_assertions = "1.4"
proc-macro2 = "1.0"
rayon = "1.7"
rustc-hash = "1.1.0"
serde = "1.0"
syn = "2.0"
target-lexicon = "0.12.12"
tracing = "0.1.40"
tracing-forest = "0.1"
tracing-subscriber = "0.3" 
walkdir = "2.3"
quote = "1.0"
