[package]
name = "codegen"
version = "0.0.0"
edition = "2021"

[dependencies]
arena = { path = "../arena" }
hir = { path = "../hir" }
thir = { path = "../thir" }
verde = { path = "../verde" }

cranelift = "0.103.0"
cranelift-module = "0.103.0"
cranelift-object = "0.103.0"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
target-lexicon = "0.12.12"
