[package]
name = "codegen"
version = "0.0.0"
edition = "2021"

[dependencies]
arena = { path = "../arena" }
hir = { path = "../hir" }
thir = { path = "../thir" }
verde = { path = "../verde" }

cranelift = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
target-lexicon = { workspace = true }
