[package]
name = "driver"
version = "0.0.0"
edition = "2021"

[dependencies]
codegen = { path = "../codegen" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
hir-lower = { path = "../hir-lower" }
parse = { path = "../parse" }
pretty = { path = "../pretty" }
text = { path = "../text" }
thir = { path = "../thir" }
tycheck = { path = "../tycheck" }
verde = { path = "../verde", features = ["tracing", "debug"] }

rayon = "1.7"
rustc-hash = "1.1"
tracing = "0.1"
