[package]
name = "driver"
version = "0.0.0"
edition = "2021"

[dependencies]
codegen = { path = "../codegen" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
hir-lower = { path = "../hir-lower" }
parse = { path = "../parse" }
pretty = { path = "../pretty" }
text = { path = "../text" }
thir = { path = "../thir" }
tycheck = { path = "../tycheck" }
verde = { path = "../verde", features = ["tracing", "debug"] }

rayon = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
