[package]
name = "hir-lower"
version = "0.0.0"
edition = "2021"

[dependencies]
arena = { path = "../arena" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
syntax = { path = "../syntax" }
text = { path = "../text" }
verde = { path = "../verde" }

rustc-hash = "1.1"
tracing = "0.1"
