[package]
name = "hir"
version = "0.0.0"
edition = "2021"

[dependencies]
arena = { path = "../arena" }
diagnostics = { path = "../diagnostics" }
syntax = { path = "../syntax" }
text = { path = "../text" }
verde = { path = "../verde" }

rustc-hash = "1.1"

[target.test.dependencies]
verde = { path = "../verde", features = ["test"] }
