[package]
name = "parse"
version = "0.0.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
lex = { path = "../lex" }
syntax = { path = "../syntax" }
text = { path = "../text" }
verde = { path = "../verde" }

[target.test.dependencies]
verde = { path = "../verde", features = ["test"] }

[dev-dependencies]
expect-test = "1.4.0"
pretty_assertions = "1.2.1"
