[package]
name = "parse"
version = "0.0.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
lex = { path = "../lex" }
syntax = { path = "../syntax" }
text = { path = "../text" }

rustc-hash = "1.1"
tracing = "0.1"

[dev-dependencies]
expect-test = "1.4"
pretty_assertions = "1.4"
