[package]
name = "parse"
version = "0.0.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
lex = { path = "../lex" }
syntax = { path = "../syntax" }
text = { path = "../text" }

rustc-hash = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
pretty_assertions = { workspace = true }
