[package]
name = "tycheck"
version = "0.0.0"
edition = "2021"

[dependencies]
arena = { path = "../arena" }
diagnostics = { path = "../diagnostics" }
hir = { path = "../hir" }
thir = { path = "../thir" }
verde = { path = "../verde" }

rustc-hash = { workspace = true }
tracing = { workspace = true }
