[package]
name = "verde"
version = "0.2.0"
authors = ["SparkyPotato"]
license = "MIT"
edition = "2021"

readme = "README.md"
repository = "https://github.com/SparkyPotato/yam"
documentation = "https://docs.rs/verde"
description = "A refreshingly simple incremental computation library"

[package.metadata.docs.rs]
all-features = true

[features]
serde = [
    "dep:serde",
    "dashmap/serde",
    "verde-derive/serde",
    "parking_lot/serde",
]
test = []
tracing = ["dep:tracing"]

[dependencies]
verde-derive = { version = "0.1.0", path = "derive" }

dashmap = "5.5"
parking_lot = "0.12"
rustc-hash = "1.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
tracing = { version = "0.1", optional = true }
