[package]
name = "verde"
version = "0.2.0"
authors = ["SparkyPotato"]
license = "MIT"
edition = "2021"

readme = "README.md"
repository = "https://github.com/SparkyPotato/yam"
documentation = "https://docs.rs/verde"
description = "A refreshingly simple incremental computation library"

[package.metadata.docs.rs]
all-features = true

[features]
serde = [
    "dep:serde",
    "dashmap/serde",
    "verde-derive/serde",
    "parking_lot/serde",
]
test = []
tracing = ["dep:tracing"]
debug = ["parking_lot/deadlock_detection"]

[dependencies]
verde-derive = { version = "0.1.0", path = "derive" }

dashmap = { workspace = true }
parking_lot = { workspace = true, features = ["hardware-lock-elision"] }
rustc-hash = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
tracing = { workspace = true, optional = true }
