[package]
name = "yamc"
version = "0.0.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
driver = { path = "../driver" }

clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-forest = { workspace = true, features = ["ansi", "env-filter"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir = { workspace = true }
