[package]
name = "yamw"
version = "0.0.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
parse = { path = "../parse" }
# hir = { path = "../hir" }
# hir-lower = { path = "../hir-lower" }
verde = { path = "../verde", features = ["tracing"] }

clap = { version = "4.3", features = ["derive"] }
crossbeam-channel = "0.5"
notify-debouncer-mini = "0.3"
rustc-hash = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.3"
