[package]
name = "verde-derive"
version = "0.1.0"
authors = ["SparkyPotato"]
license = "MIT"
edition = "2021"

repository = "https://github.com/SparkyPotato/yam"
documentation = "https://docs.rs/verde-derive"
description = "Derive macros for verde"

[package.metadata.docs.rs]
all-features = true

[features]
serde = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.50"
quote = "1.0.23"
rustc-hash = "1.1.0"
syn = { version = "2.0.2", features = ["full", "extra-traits"] }

