[package]
name = "verde-derive"
version = "0.1.0"
authors = ["SparkyPotato"]
license = "MIT"
edition = "2021"

repository = "https://github.com/SparkyPotato/yam"
documentation = "https://docs.rs/verde-derive"
description = "Derive macros for verde"

[package.metadata.docs.rs]
all-features = true

[features]
serde = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
rustc-hash = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
